# Engine

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Deltatime.cpp  Deltatime.h  Engine.h  Light.cpp  Light.h  Makefile  Model.cpp  Model.h  Physics.cpp  Physics.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Surface.cpp  Surface.h  Window.cpp  Window.h  cmake_install.cmake  log.txt  main.cpp  token.txt
res/: rat.fbx
res/lizard/: Creature.mtl
shaders/: model.frag  model.vert  surface.frag  surface.vert  surfaceInstanced.vert
